Fix chezmoi role variable names

--- a/roles/chezmoi/defaults/main.yml
+++ b/roles/chezmoi/defaults/main.yml
@@ -1,7 +1,6 @@
 ---
 
-systemd_user: "{{ my_user | default('andrei') }}"
-systemd_user_conf: "/home/{{ systemd_user }}/.config/systemd/user"
-systemd_user_override: "/home/{{ systemd_user }}/.config/override"
+chezmoi_user: "{{ my_user | default('andrei') }}"
+chezmoi_user_override: "/home/{{ chezmoi_user }}/.config/override"
 
 chezmoi_overwrite: false
