--- a/playbooks/ovh.yml
+++ b/playbooks/ovh.yml
@@ -3,17 +3,6 @@
 - name: SSH
   hosts: ovh
   gather_facts: false
-  handlers:
-    - name: restart sshd
-      become: true
-      service:
-        name: sshd
-        state: restarted
-  pre_tasks:
-    - name: Run common role
-      import_role:
-        name: common
-      tags: ["always"]
   tasks:
     - name: add SSH keys
       authorized_key:
@@ -21,31 +10,13 @@
         key: "{{ item }}"
         state: present
       with_items: "{{ ssh_authorized_keys }}"
-      tags: ["sshd"]
+      tags: ["ssh"]
 
-    - name: set up sshd_config
+  roles:
+    - role: sshd
+      vars:
+        _sshd_pkg: "openssh-server"
       become: true
-      lineinfile:
-        dest: "/etc/ssh/sshd_config"
-        regexp: "{{ item.regexp }}"
-        line: "{{ item.line }}"
-        state: present
-      with_items:
-        - regexp: "^#?StrictModes"
-          line: "StrictModes yes"
-        - regexp: "^#?X11Forwarding"
-          line: "X11Forwarding no"
-        - regexp: "^#?PermitRootLogin"
-          line: "PermitRootLogin no"
-        - regexp: "^#?PasswordAuthentication"
-          line: "PasswordAuthentication no"
-        - regexp: "^#?ChallengeResponseAuthentication"
-          line: "ChallengeResponseAuthentication no"
-        - regexp: "^#?UsePAM"
-          line: "UsePAM yes"
-        - regexp: "^#?PermitEmptyPasswords"
-          line: "PermitEmptyPasswords no"
-      notify: restart sshd
       tags: ["sshd"]
 
 - name: Network
