--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "library/aur"]
 	path = library/aur
 	url = https://github.com/kewlfft/ansible-aur.git
+[submodule "roles/wireguard"]
+	path = roles/wireguard
+	url = https://github.com/githubixx/ansible-role-wireguard
