Add node_exporter for ovh

--- a/host_vars/dresrv/prometheus.yml
+++ b/host_vars/dresrv/prometheus.yml
@@ -28,6 +28,9 @@ prometheus_scrape_configs:
       - targets: ["localhost:{{ node_exporter_port }}"]
         labels:
           instance: "{{ server_label }}"
+      - targets: ["{{ hostvars['ovh-gw01'].wireguard_ip }}:{{ node_exporter_port }}"]
+        labels:
+          instance: "{{ hostvars['ovh-gw01'].inventory_hostname }}"
       - targets: ['localhost:17766']
         labels:
           instance: "{{ desktop_label }}"
