--- a/host_vars/ovh-gw01/vars.yml
+++ b/host_vars/ovh-gw01/vars.yml
@@ -1,5 +1,6 @@
 ---
 
+domain: "{{ vault_domain }}"
 ansible_host: "{{ vault_ansible_host }}"
 ansible_user: "{{ vault_ansible_user }}"
 ipv6_address: "{{ vault_ipv6_address }}"
