--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -4,6 +4,9 @@ my_email: "{{ vault_my_email }}"
 ports:
   node_exporter: 9100
 
+cert_path: "{{ inventory_dir }}/files/all/elk_ssl"
+ca_pass: "{{ lookup('file', inventory_dir + '/.secrets/ca_key').strip() }}"
+
 locale_gen:
   - "en_US.UTF-8"
   - "en_GB.UTF-8"
