Add filebeat to ovh

--- a/playbooks/ovh.yml
+++ b/playbooks/ovh.yml
@@ -108,3 +108,7 @@
     - role: node_exporter
       become: true
       tags: ["node_exporter"]
+
+    - role: filebeat
+      become: true
+      tags: ["filebeat"]
