--- a/host_vars/dresrv/samba.yml
+++ b/host_vars/dresrv/samba.yml
@@ -44,22 +44,12 @@ samba_shares:
     comment: "Rust Storage"
     path: "/tank"
     writable: yes
-    "hide files": "yes/timemachine"
-    "veto files": "timemachine"
+    "hide files": "yes"
 
   www:
     comment: "Web Root"
     path: "{{ web_root }}"
     writable: yes
-
-  timemachine:
-    comment: "Time Machine Backups"
-    path: "/tank/timemachine"
-    "read only": no
-    "valid users": "timemachine"
-    "vfs objects": "catia fruit streams_xattr"
-    "fruit:time machine": yes
-    "fruit:time machine max size": "500G"
 
   motion:
     comment: "Motion Storage"
