--- a/host_vars/drepi/ufw.yml
+++ b/host_vars/drepi/ufw.yml
@@ -5,3 +5,5 @@ ufw_local_rules:
     - { port: "8081", proto: "tcp" }  # Motion
     - { port: "137", proto: "udp" }   # SMB client
     - { port: "138", proto: "udp" }   # SMB client
+    - { port: "2049", proto: "udp" }   # NFS client
+    - { port: "2049", proto: "tcp" }   # NFS client
