--- a/playbooks/laptop.yml
+++ b/playbooks/laptop.yml
@@ -49,6 +49,9 @@
     - role: discord
       tags: ["discord"]
 
+    - role: paru
+      tags: ["paru"]
+
     - role: sshd
       tags: ["sshd"]
 
