--- a/playbooks/i3.yml
+++ b/playbooks/i3.yml
@@ -29,6 +29,9 @@
     - role: discord
       tags: ["discord"]
 
+    - role: paru
+      tags: ["paru"]
+
     - role: sshd
       tags: ["sshd"]
 
