--- a/playbooks/laptop.yml
+++ b/playbooks/laptop.yml
@@ -37,6 +37,9 @@
     - role: borg
       tags: ["borg"]
 
+    - role: reflector
+      tags: ["reflector"]
+
     - role: chezmoi
       tags: ["chezmoi"]
 
