--- a/host_vars/ovh-gw01/node_exporter.yml
+++ b/host_vars/ovh-gw01/node_exporter.yml
@@ -2,3 +2,5 @@
 
 node_exporter_port: 9100
 node_exporter_web_listen_address: "{{ wireguard_ip }}:{{ node_exporter_port }}"
+node_exporter_collectors:
+  - systemd
