Intial romsto wireguard support

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	url = https://github.com/kewlfft/ansible-aur.git
 [submodule "roles/wireguard"]
 	path = roles/wireguard
-	url = https://github.com/githubixx/ansible-role-wireguard
+	url = git@github.com:cosandr/ansible-role-wireguard.git
 [submodule "roles/alertmanager"]
 	path = roles/alertmanager
 	url = git@github.com:cosandr/ansible-alertmanager.git
