--- a/host_vars/dresrv/alertmanager.yml
+++ b/host_vars/dresrv/alertmanager.yml
@@ -2,18 +2,24 @@
 
 alertmanager_version: latest
 alertmanager_web_listen_address: "0.0.0.0:9093"
+alertmanager_web_external_url: "http://{{ ansible_host }}:9093/"
 alertmanager_slack_api_url: "{{ vault_alertmanager_slack_api_url }}"
+# https://github.com/prometheus/alertmanager/blob/main/template/default.tmpl
 alertmanager_receivers:
   - name: discord
     slack_configs:
       - send_resolved: true
+        title: '{% raw %}[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ .GroupLabels.SortedPairs.Values | join " " }} {{ if gt (len .CommonLabels) (len .GroupLabels) }}{{ end }}{% endraw %}'
         fields:
-          - title: '{% raw %}{{ .CommonAnnotations.summary }}{% endraw %}'
-            value: '{% raw %}{{ .CommonAnnotations.description }}{% endraw %}'
+          - title: 'Summary'
+            value: '{% raw %}{{ if .Alerts }}{{ range .Alerts }}{{ .Annotations.summary }}{{ printf "\n" }}{{ end }}{{ else }}{{ .CommonAnnotations.summary }}{{ end }}{% endraw %}'
+            short: false
+          - title: 'Description'
+            value: '{% raw %}{{ if .Alerts }}{{ range .Alerts }}{{ .Annotations.description }}{{ printf "\n" }}{{ end }}{{ else }}{{ .CommonAnnotations.description }}{{ end }}{% endraw %}'
             short: false
 alertmanager_route:
-  group_by: ['name']
+  group_by: ['instance', 'job']
   group_wait: 30s
   group_interval: 5m
-  repeat_interval: 8736h
+  repeat_interval: 168h
   receiver: discord
