Move tlp into its own role

--- a/playbooks/laptop.yml
+++ b/playbooks/laptop.yml
@@ -63,6 +63,9 @@
     - role: sudo
       tags: ["sudo"]
 
+    - role: tlp
+      tags: ["tlp"]
+
     # - role: xss-lock
     #   tags: ["xss-lock"]
 
